foundation-objs/main/default/objects/Integration_Add_On__c/Integration_Add_On__c.object-meta.xml
<CustomObject>
    <label>Integration Add On</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Add Ons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>