foundation-objs/main/default/objects/Integration_Add_On__c/fields/Add_On_Scope__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Scope__c</fullName>
    <label>Add On Scope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>