foundation-objs/main/default/objects/Integration_Add_On__c/fields/ERP_Family__c.field-meta.xml
<CustomField>
    <fullName>ERP_Family__c</fullName>
    <label>ERP Family</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ERP_Family</valueSetName>
    </valueSet>
</CustomField>