foundation-objs/main/default/objects/Integration_Add_On__c/fields/Estimated_Effort_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Effort_in_Days__c</fullName>
    <label>Estimated Effort in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>