foundation-objs/main/default/objects/Integration_Add_On__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <length>255</length>
    <type>Text</type>
</CustomField>