foundation-objs/main/default/objects/Integration_Add_On__c/fields/Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU__c</fullName>
    <label>Product SKU</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>