foundation-objs/main/default/objects/Integration_Add_On__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Add_On_Type</valueSetName>
    </valueSet>
</CustomField>