foundation-objs/main/default/objects/Integration_Add_On__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ERP_Family__c</columns>
    <columns>Product_SKU__c</columns>
    <columns>Module__c</columns>
    <columns>List_Price__c</columns>
    <columns>Estimated_Effort_in_Days__c</columns>
    <columns>Add_On_Scope__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>